# openclaw-auditkit

./: .gitignore  LICENSE  MAINTAINING.md  README.md  pyproject.toml
.github/workflows/: auditkit.yml
docs/: automation-loop.md
examples/simple-change/: README.md
schemas/: audit_packet.schema.json
src/openclaw_auditkit/: __init__.py  cli.py  closeout.py  evidence.py  followup.py  models.py  packet.py  policy.py  reviewer.py
tests/: test_packet_followup.py  test_policy.py
