[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openclaw-auditkit"
version = "0.1.0"
description = "Owner-routed three-tier audit packets for self-evolving tools and agent workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "OpenClaw AuditKit Contributors" }
]
keywords = ["audit", "agents", "self-evolution", "governance", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
auditkit = "openclaw_auditkit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
